syntax = "proto3";
package storage_info;

option go_package = "api/storage_info";

message Record {
    optional uint64 Index = 1;
    optional bytes Data = 2;
}

message ProducerID{
    optional uint64 ID = 1;
    optional uint64 Sequence = 2;
    optional int64 Timestamp = 3;
}


message ReplicativeData{
    repeated bytes Data = 1;
}